# SerialTalk

./: .gitignore  CONTRIBUTING.md  DEVELOPER.md  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  package.json  pyproject.toml  setup.py  uartremote.py
docs/: conf.py  index.rst
examples/: serialtalk  socket_client.py  socket_server.py  uart_server_esp32.py  usocket_client.py
examples/pybrics-ev3-lms-esp32/: README.md  main.py
examples/pybrics-ev3-lms-esp32/say_hello/: main.py  serialtalk
serialtalk/: __init__.py  auto.py  esp.py  esp32.py  esp8266.py  k210.py  mshub.py  mshubserial.py  openmv.py  py.typed  py3.py  pybricks.py  pybricksserial.py  serialtalk.py  sockets.py  socketserial.py  usockets.py
serialtalk_lpf2/: LPF2_esp32.py  README.md  serialtalk_lpf2.py
serialtalk_lpf2/demo/: esp32_demo_neopixels.py  esp32_lpf2_demo_call.py  esp32_lpf2_demo_push.py  esp32_lpf2_power_motor_pin.py  pybricks_demo_neopixels.py  pybricks_lpf2_demo_call.py  pybricks_lpf2_demo_push.py
